--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -6,7 +6,6 @@
   <package id="Emgu.CV.runtime.windows" version="4.4.0.4099" targetFramework="net472" />
   <package id="Emgu.CV.UI" version="4.4.0.4099" targetFramework="net472" />
   <package id="IronOcr" version="2020.11.2" targetFramework="net472" />
-  <package id="IronPython" version="2.7.11" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Connections.Abstractions" version="5.0.1" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Http.Connections.Client" version="5.0.1" targetFramework="net472" />
@@ -24,9 +23,6 @@
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="NumSharp" version="0.20.5" targetFramework="net472" />
-  <package id="OpenCvSharp4" version="4.5.0.20201013" targetFramework="net472" />
-  <package id="ResponsiveGrid" version="0.3.3" targetFramework="net472" />
   <package id="RestSharp" version="106.11.7" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
@@ -50,6 +46,5 @@
   <package id="System.Threading.Channels" version="5.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
-  <package id="Tesseract" version="3.3.0" targetFramework="net472" />
-  <package id="Tesseract.Net.SDK" version="1.15.342" targetFramework="net472" />
+  <package id="ZXing.Net" version="0.16.6" targetFramework="net472" />
 </packages>
